<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.DetailActivity">

    <ImageView
        android:id="@+id/iv_detail_bg"
        android:layout_width="match_parent"
        android:layout_height="322dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <ImageView
        android:id="@+id/iv_detail_darker"
        android:layout_width="match_parent"
        android:layout_height="322dp"
        app:layout_constraintBottom_toTopOf="@+id/iv_detail_solid"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bg_item" />

    <ImageView
        android:id="@+id/iv_detail_solid"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_detail_bg"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/bg_solid" />

    <ImageView
        android:id="@+id/iv_detail_poster"
        android:layout_width="126dp"
        android:layout_height="189dp"
        android:layout_marginStart="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_detail_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_detail_darker"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tv_detail_title"
        style="@style/TitleTextView"
        android:textSize="18sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/tv_detail_rdate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline3" />

    <TextView
        android:id="@+id/tv_detail_rdate"
        style="@style/DetailTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:textSize="14sp"
        android:text="@string/releasedate"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/tv_userscore"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline3" />

    <TextView
        android:id="@+id/tv_detail_genre"
        style="@style/Overview"
        android:layout_width="227dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:maxLines="2"
        android:text="@string/genre"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/tv_genre" />

    <TextView
        android:id="@+id/tv_detail_userscore"
        style="@style/Overview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:text="TextView"
        android:textColor="@android:color/white"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="@+id/iv_detail_solid" />

    <ImageView
        android:layout_width="17dp"
        android:layout_height="19dp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_detail_userscore"
        app:layout_constraintStart_toEndOf="@+id/tv_detail_userscore"
        app:layout_constraintTop_toTopOf="@+id/tv_detail_userscore"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@android:drawable/btn_star_big_on" />

    <TextView
        android:id="@+id/tv_detail_overview"
        style="@style/Overview"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="20dp"
        android:text="@string/overview"
        android:scrollbars="vertical"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail_genre" />

    <TextView
        android:id="@+id/tv_userscore"
        style="@style/DetailTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/userscore"
        android:textSize="16sp"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="@+id/iv_detail_bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline3" />

    <TextView
        android:id="@+id/tv_genre"
        style="@style/DetailTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/genre"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail_userscore" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.39" />

    <TextView
        style="@style/DetailTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="8dp"
        android:textSize="16sp"
        android:text="@string/overview"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/tv_detail_overview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>