<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.TvshowFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycleViewTvshow"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:listitem="@layout/item_row_movie"
        android:background="@drawable/bg_solid"/>

</FrameLayout>